--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
+    "dotenv-cli": "^4.1.0",
+    "dotenv-safe": "^8.2.0",
+    "ley": "^0.7.1",
     "next": "12.0.1",
+    "postgres": "2.0.0-beta.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
