--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate": "dotenv ley"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "camelcase-keys": "^7.0.1",
     "dotenv-cli": "^4.1.0",
     "dotenv-safe": "^8.2.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
     "@next/eslint-plugin-next": "^11.1.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
