Adds sessions table migration and creates logic to login and register page for session cookie storage

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "camelcase-keys": "^7.0.1",
+    "cookie": "^0.4.1",
     "dotenv-cli": "^4.1.0",
     "dotenv-safe": "^8.2.0",
     "ley": "^0.7.1",
@@ -25,6 +26,7 @@
     "@babel/eslint-parser": "^7.15.8",
     "@next/eslint-plugin-next": "^11.1.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
     "@types/dotenv-safe": "^8.1.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
