--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "bcrypt": "^5.0.1",
     "camelcase-keys": "^7.0.1",
     "cookie": "^0.4.1",
+    "csrf": "^3.1.0",
     "dotenv-cli": "^4.1.0",
     "dotenv-safe": "^8.2.0",
     "ley": "^0.7.1",
-    "next": "12.0.1",
+    "next": "11.1.2",
     "postgres": "2.0.0-beta.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
