--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/eslint-plugin-next": "^11.1.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.4.1",
+    "@types/csrf": "^3.1.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
