--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv-safe": "^8.2.0",
     "ley": "^0.7.1",
     "next": "11.1.2",
+    "pg-connection-string": "^2.5.0",
     "postgres": "2.0.0-beta.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
